--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   permission_handler: ^11.3.0
   flutter_screenutil: ^5.9.0
   flutter_launcher_icons: ^0.13.1
+  fl_chart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
