잠재능력 시뮬 및 기댓값 기능 [80% 구현]
스타포스 시뮬 이벤트적용 구현

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ flutter:
     - assets/images/areas/
     - assets/images/weeks/
     - assets/images/consumes/
+    - assets/datas/
 
   fonts:
     - family: MaplestoryOTF
